scenarios/calico-istio/istio/istio-system/istio-gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - grafana.local
        - kiali.local
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
